--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -47,11 +47,12 @@
         </li>
         <!-- end admin dropdown -->
       <% end %>
-        <li><%= link_to "My Cart", view_order_path %></li>
+        <li><%= link_to "My Cart (#{@line_items.sum('quantity')})", view_order_path %></li>
       <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= image_tag "TTS.png", size: 25 %><span class="caret"></span></a>
           <ul class="dropdown-menu">
             <% if current_user %>
+                <li><%= link_to 'Your Orders', your_orders_path %></li>
                 <li><%= link_to 'Edit Profile', edit_user_registration_path %></li>
                 <li><%= link_to 'Sign Out', destroy_user_session_path, method: :delete %></li>
               <% else %>
